[package]
name = "achi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "backend/src/main.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
axum = "0.2.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.11.0", features = ["full"] }
